--- a/photography.html
+++ b/photography.html
@@ -65,7 +65,7 @@
            <figcaption>Dublin City</figcaption>
        </figure>
        <figure>
-           <a href="#"><img src="images/banner.JPG" alt="image-4" title="image-004"></a>
+           <a href="#"><img src="images/trialerror.JPG" alt="image-4" title="image-004"></a>
            <figcaption>Trial & Error</figcaption>
        </figure>
        
